src-ken&y/objects/Fiscal_Year__c.object
<CustomObject>
    <customHelpPage>HelpYearEndClose</customHelpPage>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Fiscal Years</relationshipLabel>
        <relationshipName>Fiscal_Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End_Date__c</fullName>
        <label>Fiscal Year End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Start_Date__c</fullName>
        <label>Fiscal Year Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retained Earnings</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (1 AND 3 AND 4)</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria. The GL Account you selected is either not Active or Type is not Equity or does not has GL Type with accounting type as Equity</errorMessage>
            <filterItems>
                <field>GL_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>GL_Account__c.Type__c</field>
                <operation>equals</operation>
                <value>Equity</value>
            </filterItems>
            <filterItems>
                <field>GL_Account__c.GL_Type__c</field>
                <operation>notEqual</operation>
                <value>null</value>
            </filterItems>
            <filterItems>
                <field>GL_Account__c.GL_Type__r.Accounting_Type__c</field>
                <operation>equals</operation>
                <value>Equity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Fiscal Years</relationshipLabel>
        <relationshipName>Fiscal_Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <label>Primary Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Fiscal Year</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Fiscal_Year_Start_Date__c</columns>
        <columns>Fiscal_Year_End_Date__c</columns>
        <columns>GL_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fiscal Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiscal Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Company_Required_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Company__c = NULL</errorConditionFormula>
        <errorMessage>Please specify a company for this fiscal year.</errorMessage>
    </validationRules>
</CustomObject>